[gd_scene load_steps=10 format=2]

[ext_resource path="res://textures/mushroom red.png" type="Texture" id=1]
[ext_resource path="res://textures/crosshair.png" type="Texture" id=2]
[ext_resource path="res://planterUI.gd" type="Script" id=3]
[ext_resource path="res://textures/morerandomstuff/tinker.obj" type="ArrayMesh" id=4]
[ext_resource path="res://textures/mushroom.png" type="Texture" id=5]
[ext_resource path="res://textures/grungeHex.png" type="Texture" id=6]
[ext_resource path="res://textures/grungeTickmark.png" type="Texture" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.521246, 0.071054, 0.540332 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.552019, 0.100025, 0.547069 )

[node name="Basic Planter" type="StaticBody"]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0628771 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
transform = Transform( 0.01, 0, 0, 0, -4.37114e-10, 0.01, 0, -0.01, -4.37114e-10, 0.0406827, -0.0397906, 0.113939 )
mesh = ExtResource( 4 )
material/0 = null
material/1 = null

[node name="planter" type="Area" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="planter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.094792, 0.0450285 )
shape = SubResource( 2 )

[node name="UI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cropHolder" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -207.5
margin_right = 209.0
margin_bottom = 207.5
texture = ExtResource( 2 )
expand = true

[node name="cropIcon" type="TextureRect" parent="UI/cropHolder"]
anchor_left = 0.494
anchor_top = 0.523
anchor_right = 0.494
anchor_bottom = 0.523
margin_left = -148.058
margin_top = -146.987
margin_right = 147.942
margin_bottom = 147.013
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="redShroomHolder" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.576
margin_top = -242.675
margin_right = -159.576
margin_bottom = -115.675
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="redShroom" type="TextureButton" parent="UI/redShroomHolder"]
anchor_left = 0.494
anchor_top = 0.523
anchor_right = 0.494
anchor_bottom = 0.523
margin_left = -37.9608
margin_top = -40.3939
margin_right = 39.0392
margin_bottom = 35.6061
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="brownShroomHolder" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -363.122
margin_top = -116.196
margin_right = -235.122
margin_bottom = 10.8044
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="brownShroom" type="TextureButton" parent="UI/brownShroomHolder"]
anchor_left = 0.494
anchor_top = 0.523
anchor_right = 0.494
anchor_bottom = 0.523
margin_left = -37.9608
margin_top = -40.3939
margin_right = 39.0392
margin_bottom = 35.6061
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmHolder" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.816
anchor_right = 0.5
anchor_bottom = 0.816
margin_left = -33.0
margin_top = 22.4
margin_right = 34.0
margin_bottom = 89.4
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirm" type="TextureButton" parent="UI/confirmHolder"]
anchor_left = 0.5
anchor_top = 0.492
anchor_right = 0.5
anchor_bottom = 0.492
margin_left = -27.5551
margin_top = -26.4838
margin_right = 25.4449
margin_bottom = 26.5162
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="UI/redShroomHolder/redShroom" to="UI" method="_on_redShroom_button_up"]
[connection signal="button_up" from="UI/brownShroomHolder/brownShroom" to="UI" method="_on_brownShroom_button_up"]
[connection signal="button_up" from="UI/confirmHolder/confirm" to="UI" method="_on_confirm_button_up"]
